# uni_aizo_p_z2

./: .clang-format  CMakeLists.txt  README.md
data/: graphList_test.txt  graphMatrix_test.txt
include/: aizo.hpp  aizo_algo_mst.hpp  aizo_algo_sp.hpp  aizo_ds.hpp  aizo_ds_graphlist.hpp  aizo_ds_graphmatrix.hpp  aizo_ds_igraph.hpp  aizo_tool.hpp  aizo_tool_gengraph.hpp  aizo_tool_measure.hpp  aizo_tool_menu.hpp  aizo_tool_readergraph.hpp  aizo_tool_timer.hpp
src/: CMakeLists.txt  aizo_algo_mst.cpp  aizo_algo_sp.cpp  aizo_ds_graphlist.cpp  aizo_ds_graphmatrix.cpp  aizo_tool_gengraph.cpp  aizo_tool_measure.cpp  aizo_tool_menu.cpp  aizo_tool_readergraph.cpp  main.cpp
